vendor/mico-2.3.2/test/idl/error/case15.idl

/*
 * Reference to z in x::x should not be resolved to y::z
 */

module y {
  typedef short z;
  interface y {
  };
};

module x {
  interface x : y::y {
    z parent();
  };
};
